// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Header renders with closing button color black 1`] = `
<div
  className="sc-aXZVg liCUIU"
  display="flex"
>
  Modal Content
  <button
    className="sc-aXZVg hLmiUW"
    color="color.white"
    cursor="pointer"
    disabled={false}
    display="flex"
    filter="none"
    fontSize="md"
    fontWeight={600}
    letterSpacing={1.25}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    width="fit-content"
  >
    <div
      className="sc-aXZVg eXhFFb"
      display="flex"
      height="20px"
      width="20px"
    >
      <svg
        fill="#000000"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="SVGRepo_bgCarrier"
          strokeWidth="0"
        />
        <g
          id="SVGRepo_tracerCarrier"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <g
          id="SVGRepo_iconCarrier"
        >
          <path
            d="M764.288 214.592 512 466.88 259.712 214.592a31.936 31.936 0 0 0-45.12 45.12L466.752 512 214.528 764.224a31.936 31.936 0 1 0 45.12 45.184L512 557.184l252.288 252.288a31.936 31.936 0 0 0 45.12-45.12L557.12 512.064l252.288-252.352a31.936 31.936 0 1 0-45.12-45.184z"
            fill="black"
          />
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Modal Header renders with closing button with size large 1`] = `
<div
  className="sc-aXZVg liCUIU"
  display="flex"
>
  Modal Content
  <button
    className="sc-aXZVg hLmiUW"
    color="color.white"
    cursor="pointer"
    disabled={false}
    display="flex"
    filter="none"
    fontSize="md"
    fontWeight={600}
    letterSpacing={1.25}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    width="fit-content"
  >
    <div
      className="sc-aXZVg eXhFFb"
      display="flex"
      height="20px"
      width="20px"
    >
      <svg
        fill="#000000"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="SVGRepo_bgCarrier"
          strokeWidth="0"
        />
        <g
          id="SVGRepo_tracerCarrier"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <g
          id="SVGRepo_iconCarrier"
        >
          <path
            d="M764.288 214.592 512 466.88 259.712 214.592a31.936 31.936 0 0 0-45.12 45.12L466.752 512 214.528 764.224a31.936 31.936 0 1 0 45.12 45.184L512 557.184l252.288 252.288a31.936 31.936 0 0 0 45.12-45.12L557.12 512.064l252.288-252.352a31.936 31.936 0 1 0-45.12-45.184z"
            fill="theme.primary"
          />
        </g>
      </svg>
    </div>
  </button>
</div>
`;

exports[`Modal Header renders with custom closing button 1`] = `
<div
  className="sc-aXZVg liCUIU"
  display="flex"
>
  <button
    className="sc-aXZVg hLmiUW"
    color="color.white"
    cursor="pointer"
    disabled={false}
    display="flex"
    filter="none"
    fontSize="md"
    fontWeight={600}
    letterSpacing={1.25}
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    role="button"
    width="fit-content"
  >
    <div
      className="sc-aXZVg eXhFFb"
      display="flex"
      height="20px"
      width="20px"
    >
      <svg
        fill="#000000"
        height="20px"
        viewBox="0 0 1024 1024"
        width="20px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="SVGRepo_bgCarrier"
          strokeWidth="0"
        />
        <g
          id="SVGRepo_tracerCarrier"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <g
          id="SVGRepo_iconCarrier"
        >
          <path
            d="M764.288 214.592 512 466.88 259.712 214.592a31.936 31.936 0 0 0-45.12 45.12L466.752 512 214.528 764.224a31.936 31.936 0 1 0 45.12 45.184L512 557.184l252.288 252.288a31.936 31.936 0 0 0 45.12-45.12L557.12 512.064l252.288-252.352a31.936 31.936 0 1 0-45.12-45.184z"
            fill="theme.primary"
          />
        </g>
      </svg>
    </div>
  </button>
  Modal Content
</div>
`;

exports[`Modal Header renders without closing button 1`] = `
<div
  className="sc-aXZVg kZvKaE"
  display="flex"
>
  Modal Content
</div>
`;
